-------------------------------
FlexCat Open Source - Changelog
-------------------------------

$Id$
$URL$

2007-01-01  David Rey <tactica@users.sourceforge.net>

    * ChangeLog: replaced "Source" with "URL" keyword for SVN
    * gpl.txt: renamed as COPYING
    * developer.readme: renamed as README
    * todo: renamed as TODO
    * misc: rearranged the whole directory hierarchy

2006-12-31  Joerg Strohmayer <nospam@gmx.de>

    * Makefile, flexcat.h: Several flexcat->FlexCat changes to be able to
      build on case sensitive file systems, renamed flexcat_cat(_other).h
      to FlexCat_cat(_other).h for the same reason.


--- Sources moved to SubVersion ---


2006-12-30  David Rey <tactica@users.sourceforge.net>

    * scancd.c, scanct.c: they now take a '#' in the first column of a
      line as command introducer and skip any blank spaces, tabs and
      further '#' symbols found afterwards to be compatible with CatComp
      (fixes bug #1473677)
    * FlexCat.cd: removed MSG_ERR_NOCTCOMMAND, now obsoleted by this change
    * Makefile, createcat.c, createcat.h, createcatsrc.c, createcatsrc.h,
      createct.c, createct.h, flexcat.h, getft.c, globals.h, main.c,
      readprefs.h, scancd.c, scancd.h, scanct.c, scanct.h, showfuncs.c,
      showfuncs.h, swapfuncs.h, utils.c, utils.h: removed C++ style comments
      and made some other minor adjustments
    * flexcat_cat.h, flexcat_cat_other.h, locale.c, locale_other.c:
      regenerated

2006-12-27  David Rey <tactica@users.sourceforge.net>

    * FlexCat.cd: converted all identifiers to use only uppercase letters,
      renamed some to make them more descriptive, renamed all MSG_WARN_#?
      identifiers as MSG_ERR_#?, then put them all together starting
      from slot 100.
    * createcat.c, createcatsrc.c, createct.c, main.c, readprefs.c,
      scancd.c, scanct.c, showfuncs.c, utils.c: modified to suit
    * flexcat_cat_other.h, flexcat_cat.h, locale.c, locale_other.c:
      regenerated
