@@ -12,6 +12,11 @@ $URL$
     * developer.readme: renamed as README
     * todo: renamed as TODO
     * misc: rearranged the whole directory hierarchy
+    * Makefile: modified to suit the changes in the directory layout,
+      dropped the removal of m68k specific builds from the "clean" target
+      (this belongs to the smakefile), added removal of the guide files
+      to it, and added a "realclean" one which additionally removes the
+      autogenerated headers
 
 2006-12-31  Joerg Strohmayer <nospam@gmx.de>
 
